--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/roboto": "^4.5.2",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.3.1",
+    "@reduxjs/toolkit": "^1.7.1",
     "next": "12.0.9",
+    "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
