--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
     "@reduxjs/toolkit": "^1.7.2",
+    "axios": "^0.25.0",
     "next": "12.0.9",
     "prettier": "^2.5.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
