--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.3.1",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.25.0",
+    "cookie": "^0.4.2",
+    "js-cookie": "^3.0.1",
     "next": "12.0.9",
     "prettier": "^2.5.1",
     "react": "17.0.2",
@@ -25,6 +27,8 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
